--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "aos": "^2.3.4",
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scroll-trigger": "^0.6.14",
     "remixicon": "^3.5.0"
